complete footer section and fix required alignment

--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@
 
 #header {
   background-color: rgb(245, 26, 26);
-  position: relative;
 }
 
 #nav-item {
@@ -94,7 +93,6 @@ button {
 .card-title21:hover {
   text-decoration: underline;
   text-decoration-color: red;
-
 }
 
 .card-title:hover {
@@ -169,16 +167,22 @@ iframe {
   height: 479px;
 }
 
+.icon-container {
+  display: flex;
+}
+
 .footer-icons {
   display: flex;
-  justify-content: flex-end;
   justify-content: space-evenly;
   font-size: 2rem;
   list-style: none;
+  width: 20rem;
+  margin-left: auto;
 }
 
-.footer-icon {
+.footer-icon a {
   margin-top: -3px;
+  color: black;
 }
 
 .footer-links {
@@ -197,7 +201,7 @@ iframe {
   cursor: pointer;
 }
 
-button {
+.button {
   background-color: #f10909;
   color: #fff;
   border: none;
@@ -215,9 +219,5 @@ button {
   font-weight: bolder;
   color: #f10909;
   transform: translateX(-159px);
+  margin-left: 10rem;
 }
-
-.img-con {
-  padding-top: 60px;
-}
- 
